updates to names

--- a/azure.yaml
+++ b/azure.yaml
@@ -1,6 +1,9 @@
 # yaml-language-server: $schema=https://raw.githubusercontent.com/Azure/azure-dev/main/schemas/v1.0/azure.yaml.json
 
 name: akv-iot-sync
+infra:
+  type: 
+    provider: bicep
 services:
   api:
     project: ./src/api
